2008-01-09  higepon  <higepon@users.sourceforge.jp>

        * core/monapi/string.cpp (strncpy): Fixed when n < strlen(src).

2008-01-08  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/string/strncpy.c (strncpy): Fixed when n < strlen(src).

        * core/monalibc/string/strncat.c (strncat): Fixed the bug of size n == 0.

2007-12-28  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/stdio/fread.c (__nida_fullybuf_fread): Fixed buffer over flow. Thx id:h0shu.

        * configure : Added wine for Mingw.

2007-12-19  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/gdb-adapter.cpp (exceptionHandler): Added for gdb stub. Not worked yes.

2007-12-14  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/gdb-adapter.cpp (putDebugChar): Added putDebugChar (using Uart driver).
                                                      Added getDebugChar (using Uart driver).

        * core/kernel/kernel.cpp (startKernel): Added initialize of COM2 serial port.

        * core/kernel/LogConsole.cpp: Chageged to use Uart driver.

        * core/kernel/Uart.cpp: Uart driver works well for both COM1 and COM2.
                                Added readChar, writeChar support.

2007-12-13  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/Uart.cpp (Uart::Uart): Added Uart (Universal Asynchronous Receiver Transmitter) driver.
                                             Not yet completed.

2007-12-07  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/gdb-adapter.cpp (gdb_printf): Added for gdb-stub.

        * core/kernel/string.cpp (ltona): Removed ltona.

        * core/kernel/LogConsole.cpp: Changed to use vsprintf.

        * core/kernel/GraphicalConsole.cpp: Changed to use vsprintf.

        * core/kernel/VesaConsole.cpp (VesaConsole::putInt): Removed putInt.
                                      (VesaConsole::printf): Changed to use vsprintf.
